# LLVM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  llc_vesrion.txt  requirements.txt  setup.sh  test_lex_arch.sh  vcpkg.json  very_simple.ll  very_simple.s
app_llvm_constructor/: CMakeLists.txt  README.md
app_llvm_constructor/artefacts/: app.ll
app_llvm_constructor/src/: constructor.cpp  empty.c  example.txt
frontend/: CMakeLists.txt  ViperLang.g4  ViperLang.interp  ViperLangBaseListener.cpp  ViperLangBaseListener.h  ViperLangBaseVisitor.cpp  ViperLangBaseVisitor.h  ViperLangLexer.cpp  ViperLangLexer.h  ViperLangLexer.interp  ViperLangListener.cpp  ViperLangListener.h  ViperLangParser.cpp  ViperLangParser.h  ViperLangVisitor.cpp  ViperLangVisitor.h  a.out  expr.txt  frontend.cpp  main.cpp  test.v  vcpkg.json
frontend/.antlr/: ViperLang.tokens  ViperLangLexer.interp  ViperLangLexer.java  ViperLangParser.java
frontend/ViperLang/: ViperLang.g4  ViperLang.interp  ViperLangBaseListener.cpp  ViperLangBaseListener.h  ViperLangBaseVisitor.cpp  ViperLangBaseVisitor.h  ViperLangLexer.cpp  ViperLangLexer.h  ViperLangLexer.interp  ViperLangLexer.tokens  ViperLangListener.cpp  ViperLangListener.h  ViperLangParser.cpp  ViperLangParser.h  ViperLangVisitor.cpp  ViperLangVisitor.h  test.v
frontend/ViperLang/.antlr/: ViperLang.interp  ViperLangBaseListener.java  ViperLangLexer.interp  ViperLangLexer.java  ViperLangLexer.tokens  ViperLangListener.java  ViperLangParser.java
frontend/test/: a.out  main.cpp
generate_app/: CMakeLists.txt  README.md
generate_app/artefacts/: empty_ir.ll  example.ll  generate_app_ir.ll
generate_app/include/: app_generator.h
generate_app/src/: app.c  constructor.cpp  constructor_ee.cpp  constructor_pass.cpp  empty.c
llvm_pass/: CMakeLists.txt  README.md
llvm_pass/artefacts/: app_with_runtime_stat_pass_ir.ll  stat.csv
llvm_pass/pass_example/: PassExample.cpp
llvm_pass/src/: RuntimePass.cpp  StatPass.cpp  analyze.py  log.c
simple_graph_app/: CMakeLists.txt  README.md  install_third_party.sh  setup.sh
simple_graph_app/artefacts/: app.ll
simple_graph_app/include/: sim.h
simple_graph_app/src/: app.c  sim.c
